bynkc/tests/fixtures/positive/297_http_method_semantics/src/api.bynk
context api

-- v0.139 (ADR 0162): method correctness for a `from http` service. The route
-- table below declares GET+POST on `/notes`, GET on `/notes/:id`, and a
-- streamed GET on `/ticks`; the router synthesises `405 + Allow`, a plain
-- `OPTIONS`, and `HEAD` from these declarations alone. Drives the
-- `http_method_behaviour` end-to-end test.
service routes from http {
  on GET("/notes") () -> Effect[HttpResult[String]] by v: Visitor {
    Ok("all notes")
  }

  on POST("/notes") (body: String) -> Effect[HttpResult[String]] by v: Visitor {
    Created(body)
  }

  on GET("/notes/:id") (id: String) -> Effect[HttpResult[String]] by v: Visitor {
    Ok(id)
  }

  on GET("/ticks") () -> Effect[HttpResult[()]] by v: Visitor {
    Streaming(Stream.of(["tick-1", "tick-2"]).take(2))
  }

  on GET("/logo") () -> Effect[HttpResult[()]] by v: Visitor {
    Raw(Bytes.fromUtf8("<svg/>"), "image/svg+xml")
  }
}
