bynkc/tests/fixtures/negative/310_http_limits_invalid_field/src/api.bynk
context api

service api from http {
  limits {
    maxBody: 1.5,
  }

  on GET("/ping") by v: Visitor () -> Effect[HttpResult[String]] {
    Ok("pong")
  }
}
